refactor: 重构分页工具类并实现智能排序检测
- 重命名PageHelper为PageUtils，避免与MyBatis官方PageHelper冲突
- 删除废弃的SortField类，统一使用BasePage的排序机制
- 实现智能排序检测：自动根据sortField参数决定是否启用排序
- 新增PageUtils.of()创建空分页对象，完善API设计
- 优化方法命名：使用of/from/map等符合Java惯例的命名